# fishregression

./: Dockerfile  fishregression.ipynb  pyproject.toml
LB/: default.conf
note/: LinearRegression.ipynb  LinearRegression.py  LinearRegression2.ipynb  r1.ipynb  r1.py
src/fr/: cli.py  main.py  manager.py  model.pkl
src/fr/model/: manager.py
