[project]
name = "fr"
version = "1.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
pp = 'fr.cli:predict'

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
